quantalang/tests/semantic_tests.quanta
// ═══════════════════════════════════════════════════════════════════════════════
// QUANTALANG — Type Checker & Borrow Checker Integration Tests
// ═══════════════════════════════════════════════════════════════════════════════

module quantalang::tests::semantic

use crate::tests::framework::*;

// ═══════════════════════════════════════════════════════════════════════════════
// TYPE CHECKER TESTS
// ═══════════════════════════════════════════════════════════════════════════════

pub fn register_typecheck_tests(runner: &mut TestRunner) {
    // ─────────────────────────────────────────────────────────────────────────
    // Basic Type Inference
    // ─────────────────────────────────────────────────────────────────────────
    
    runner.add_test(TestCase {
        name: "typecheck_integer_inference".into(),
        category: TestCategory::TypeCheck,
        source: r#"
            fn main() {
                let x = 42;           // i32 by default
                let y: i64 = 42;      // explicit i64
                let z = 42i64;        // suffix
                let w = x + 1;        // inferred from x
            }
        "#.into(),
        expected: Expected::CompileSuccess { stdout: None, exit_code: 0 },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    runner.add_test(TestCase {
        name: "typecheck_float_inference".into(),
        category: TestCategory::TypeCheck,
        source: r#"
            fn main() {
                let x = 3.14;         // f64 by default
                let y: f32 = 3.14;    // explicit f32
                let z = 3.14f32;      // suffix
            }
        "#.into(),
        expected: Expected::CompileSuccess { stdout: None, exit_code: 0 },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    runner.add_test(TestCase {
        name: "typecheck_generic_inference".into(),
        category: TestCategory::TypeCheck,
        source: r#"
            fn identity<T>(x: T) -> T { x }
            
            fn main() {
                let a = identity(42);      // T = i32
                let b = identity("hello"); // T = &str
                let c: f64 = identity(3.14);
            }
        "#.into(),
        expected: Expected::CompileSuccess { stdout: None, exit_code: 0 },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    runner.add_test(TestCase {
        name: "typecheck_closure_inference".into(),
        category: TestCategory::TypeCheck,
        source: r#"
            fn main() {
                let add = |x, y| x + y;
                let result: i32 = add(1, 2);
                
                let inc = |x| x + 1;
                let n: i32 = inc(41);
                
                let transform: fn(i32) -> i32 = |x| x * 2;
            }
        "#.into(),
        expected: Expected::CompileSuccess { stdout: None, exit_code: 0 },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    // ─────────────────────────────────────────────────────────────────────────
    // Trait Resolution
    // ─────────────────────────────────────────────────────────────────────────
    
    runner.add_test(TestCase {
        name: "typecheck_trait_method_resolution".into(),
        category: TestCategory::TypeCheck,
        source: r#"
            trait Speak {
                fn speak(&self) -> String;
            }
            
            struct Dog;
            impl Speak for Dog {
                fn speak(&self) -> String { "Woof!".into() }
            }
            
            fn make_speak<T: Speak>(animal: T) -> String {
                animal.speak()
            }
            
            fn main() {
                let dog = Dog;
                let sound = make_speak(dog);
            }
        "#.into(),
        expected: Expected::CompileSuccess { stdout: None, exit_code: 0 },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    runner.add_test(TestCase {
        name: "typecheck_associated_types".into(),
        category: TestCategory::TypeCheck,
        source: r#"
            trait Container {
                type Item;
                fn get(&self) -> Option<&Self::Item>;
            }
            
            struct Box<T> { value: T }
            
            impl<T> Container for Box<T> {
                type Item = T;
                fn get(&self) -> Option<&T> { Some(&self.value) }
            }
            
            fn extract<C: Container>(c: &C) -> Option<&C::Item> {
                c.get()
            }
        "#.into(),
        expected: Expected::CompileSuccess { stdout: None, exit_code: 0 },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    runner.add_test(TestCase {
        name: "typecheck_impl_trait".into(),
        category: TestCategory::TypeCheck,
        source: r#"
            fn make_iter() -> impl Iterator<Item = i32> {
                vec![1, 2, 3].into_iter()
            }
            
            fn accept_fn(f: impl Fn(i32) -> i32) -> i32 {
                f(42)
            }
            
            fn main() {
                let iter = make_iter();
                let result = accept_fn(|x| x * 2);
            }
        "#.into(),
        expected: Expected::CompileSuccess { stdout: None, exit_code: 0 },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    // ─────────────────────────────────────────────────────────────────────────
    // Type Errors
    // ─────────────────────────────────────────────────────────────────────────
    
    runner.add_test(TestCase {
        name: "typecheck_error_mismatched_types".into(),
        category: TestCategory::TypeCheck,
        source: r#"
            fn main() {
                let x: i32 = "hello";
            }
        "#.into(),
        expected: Expected::CompileError {
            error_code: "E0308".into(),
            message_contains: Some("mismatched types".into()),
        },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    runner.add_test(TestCase {
        name: "typecheck_error_undefined_variable".into(),
        category: TestCategory::TypeCheck,
        source: r#"
            fn main() {
                let x = undefined_var;
            }
        "#.into(),
        expected: Expected::CompileError {
            error_code: "E0425".into(),
            message_contains: Some("cannot find value".into()),
        },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    runner.add_test(TestCase {
        name: "typecheck_error_missing_trait".into(),
        category: TestCategory::TypeCheck,
        source: r#"
            fn needs_clone<T: Clone>(x: T) -> T {
                x.clone()
            }
            
            struct NotClone;
            
            fn main() {
                let x = NotClone;
                needs_clone(x);
            }
        "#.into(),
        expected: Expected::CompileError {
            error_code: "E0277".into(),
            message_contains: Some("Clone".into()),
        },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    runner.add_test(TestCase {
        name: "typecheck_error_wrong_number_of_args".into(),
        category: TestCategory::TypeCheck,
        source: r#"
            fn takes_two(a: i32, b: i32) {}
            
            fn main() {
                takes_two(1);
            }
        "#.into(),
        expected: Expected::CompileError {
            error_code: "E0061".into(),
            message_contains: Some("arguments".into()),
        },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    runner.add_test(TestCase {
        name: "typecheck_error_private_field".into(),
        category: TestCategory::TypeCheck,
        source: r#"
            mod inner {
                pub struct Point {
                    x: i32,  // private
                    pub y: i32,
                }
            }
            
            fn main() {
                let p = inner::Point { x: 1, y: 2 };
            }
        "#.into(),
        expected: Expected::CompileError {
            error_code: "E0451".into(),
            message_contains: Some("private".into()),
        },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    runner.add_test(TestCase {
        name: "typecheck_error_infinite_recursion".into(),
        category: TestCategory::TypeCheck,
        source: r#"
            struct Infinite {
                inner: Infinite,
            }
        "#.into(),
        expected: Expected::CompileError {
            error_code: "E0072".into(),
            message_contains: Some("recursive type has infinite size".into()),
        },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    // ─────────────────────────────────────────────────────────────────────────
    // Coercion and Subtyping
    // ─────────────────────────────────────────────────────────────────────────
    
    runner.add_test(TestCase {
        name: "typecheck_deref_coercion".into(),
        category: TestCategory::TypeCheck,
        source: r#"
            fn takes_str(s: &str) {}
            
            fn main() {
                let owned = String::from("hello");
                takes_str(&owned);  // &String -> &str
                
                let boxed: Box<String> = Box::new("world".into());
                takes_str(&*boxed);
            }
        "#.into(),
        expected: Expected::CompileSuccess { stdout: None, exit_code: 0 },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    runner.add_test(TestCase {
        name: "typecheck_lifetime_subtyping".into(),
        category: TestCategory::TypeCheck,
        source: r#"
            fn longer<'a: 'b, 'b>(x: &'a str) -> &'b str {
                x
            }
            
            fn main() {
                let static_str: &'static str = "hello";
                let shorter: &str = longer(static_str);
            }
        "#.into(),
        expected: Expected::CompileSuccess { stdout: None, exit_code: 0 },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
}

// ═══════════════════════════════════════════════════════════════════════════════
// BORROW CHECKER TESTS
// ═══════════════════════════════════════════════════════════════════════════════

pub fn register_borrowcheck_tests(runner: &mut TestRunner) {
    // ─────────────────────────────────────────────────────────────────────────
    // Valid Borrows
    // ─────────────────────────────────────────────────────────────────────────
    
    runner.add_test(TestCase {
        name: "borrow_multiple_immutable".into(),
        category: TestCategory::BorrowCheck,
        source: r#"
            fn main() {
                let x = 42;
                let r1 = &x;
                let r2 = &x;
                let r3 = &x;
                println!("{} {} {}", r1, r2, r3);
            }
        "#.into(),
        expected: Expected::CompileSuccess { stdout: None, exit_code: 0 },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    runner.add_test(TestCase {
        name: "borrow_reborrow".into(),
        category: TestCategory::BorrowCheck,
        source: r#"
            fn main() {
                let mut x = 42;
                let r1 = &mut x;
                {
                    let r2 = &*r1;  // reborrow immutably
                    println!("{}", r2);
                }
                *r1 += 1;  // r1 still usable
            }
        "#.into(),
        expected: Expected::CompileSuccess { stdout: None, exit_code: 0 },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    runner.add_test(TestCase {
        name: "borrow_nll_success".into(),
        category: TestCategory::BorrowCheck,
        source: r#"
            fn main() {
                let mut x = 42;
                let r = &x;
                println!("{}", r);
                // r's last use is above, so this is ok (NLL)
                x = 43;
            }
        "#.into(),
        expected: Expected::CompileSuccess { stdout: None, exit_code: 0 },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    runner.add_test(TestCase {
        name: "borrow_split_borrow".into(),
        category: TestCategory::BorrowCheck,
        source: r#"
            fn main() {
                let mut pair = (1, 2);
                let r1 = &mut pair.0;
                let r2 = &mut pair.1;  // Different fields, ok
                *r1 += 1;
                *r2 += 1;
            }
        "#.into(),
        expected: Expected::CompileSuccess { stdout: None, exit_code: 0 },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    // ─────────────────────────────────────────────────────────────────────────
    // Borrow Errors
    // ─────────────────────────────────────────────────────────────────────────
    
    runner.add_test(TestCase {
        name: "borrow_error_use_after_move".into(),
        category: TestCategory::BorrowCheck,
        source: r#"
            fn main() {
                let s = String::from("hello");
                let s2 = s;  // move
                println!("{}", s);  // error: use after move
            }
        "#.into(),
        expected: Expected::CompileError {
            error_code: "E0382".into(),
            message_contains: Some("moved".into()),
        },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    runner.add_test(TestCase {
        name: "borrow_error_mutable_while_borrowed".into(),
        category: TestCategory::BorrowCheck,
        source: r#"
            fn main() {
                let mut x = 42;
                let r = &x;
                x = 43;  // error: cannot assign while borrowed
                println!("{}", r);
            }
        "#.into(),
        expected: Expected::CompileError {
            error_code: "E0506".into(),
            message_contains: Some("cannot assign".into()),
        },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    runner.add_test(TestCase {
        name: "borrow_error_two_mutable".into(),
        category: TestCategory::BorrowCheck,
        source: r#"
            fn main() {
                let mut x = 42;
                let r1 = &mut x;
                let r2 = &mut x;  // error: second mutable borrow
                *r1 += 1;
                *r2 += 1;
            }
        "#.into(),
        expected: Expected::CompileError {
            error_code: "E0499".into(),
            message_contains: Some("cannot borrow".into()),
        },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    runner.add_test(TestCase {
        name: "borrow_error_dangling_reference".into(),
        category: TestCategory::BorrowCheck,
        source: r#"
            fn dangling() -> &i32 {
                let x = 42;
                &x  // error: returns reference to local
            }
        "#.into(),
        expected: Expected::CompileError {
            error_code: "E0515".into(),
            message_contains: Some("returns a reference to data owned by the current function".into()),
        },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    runner.add_test(TestCase {
        name: "borrow_error_move_while_borrowed".into(),
        category: TestCategory::BorrowCheck,
        source: r#"
            fn main() {
                let s = String::from("hello");
                let r = &s;
                drop(s);  // error: cannot move while borrowed
                println!("{}", r);
            }
        "#.into(),
        expected: Expected::CompileError {
            error_code: "E0505".into(),
            message_contains: Some("cannot move".into()),
        },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    runner.add_test(TestCase {
        name: "borrow_error_partial_move".into(),
        category: TestCategory::BorrowCheck,
        source: r#"
            struct Pair { a: String, b: String }
            
            fn main() {
                let p = Pair { a: "hello".into(), b: "world".into() };
                let a = p.a;  // partial move
                println!("{:?}", p);  // error: use of partially moved
            }
        "#.into(),
        expected: Expected::CompileError {
            error_code: "E0382".into(),
            message_contains: Some("partial move".into()),
        },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    // ─────────────────────────────────────────────────────────────────────────
    // Lifetime Errors
    // ─────────────────────────────────────────────────────────────────────────
    
    runner.add_test(TestCase {
        name: "borrow_error_lifetime_mismatch".into(),
        category: TestCategory::BorrowCheck,
        source: r#"
            fn longest<'a>(x: &'a str, y: &str) -> &'a str {
                if x.len() > y.len() { x } else { y }  // error: y doesn't live long enough
            }
        "#.into(),
        expected: Expected::CompileError {
            error_code: "E0621".into(),
            message_contains: Some("lifetime".into()),
        },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    runner.add_test(TestCase {
        name: "borrow_error_missing_lifetime".into(),
        category: TestCategory::BorrowCheck,
        source: r#"
            struct Container {
                data: &str,  // error: missing lifetime specifier
            }
        "#.into(),
        expected: Expected::CompileError {
            error_code: "E0106".into(),
            message_contains: Some("missing lifetime".into()),
        },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes::default(),
    });
    
    // ─────────────────────────────────────────────────────────────────────────
    // Interior Mutability
    // ─────────────────────────────────────────────────────────────────────────
    
    runner.add_test(TestCase {
        name: "borrow_cell_valid".into(),
        category: TestCategory::BorrowCheck,
        source: r#"
            use std::cell::Cell;
            
            fn main() {
                let cell = Cell::new(42);
                let r = &cell;
                cell.set(43);  // ok: Cell allows mutation through &
                println!("{}", r.get());
            }
        "#.into(),
        expected: Expected::CompileSuccess { stdout: None, exit_code: 0 },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes { needs_std: true, ..Default::default() },
    });
    
    runner.add_test(TestCase {
        name: "borrow_refcell_valid".into(),
        category: TestCategory::BorrowCheck,
        source: r#"
            use std::cell::RefCell;
            
            fn main() {
                let cell = RefCell::new(vec![1, 2, 3]);
                cell.borrow_mut().push(4);
                println!("{:?}", cell.borrow());
            }
        "#.into(),
        expected: Expected::CompileSuccess { stdout: None, exit_code: 0 },
        timeout: Duration::from_secs(5),
        attributes: TestAttributes { needs_std: true, ..Default::default() },
    });
}

// ═══════════════════════════════════════════════════════════════════════════════
// EMBEDDED TEST FILES
// ═══════════════════════════════════════════════════════════════════════════════

pub const TEST_TYPECHECK_COMPLEX_GENERICS: &str = r#"
//@ category: typecheck
//@ compile-pass

trait Functor {
    type Inner;
    fn map<F, B>(self, f: F) -> Self::Output<B>
    where
        F: FnOnce(Self::Inner) -> B;
    
    type Output<T>;
}

impl<T> Functor for Option<T> {
    type Inner = T;
    type Output<U> = Option<U>;
    
    fn map<F, B>(self, f: F) -> Option<B>
    where
        F: FnOnce(T) -> B,
    {
        match self {
            Some(x) => Some(f(x)),
            None => None,
        }
    }
}
"#;

pub const TEST_BORROW_COMPLEX_NLL: &str = r#"
//@ category: borrowcheck
//@ compile-pass

fn main() {
    let mut vec = vec![1, 2, 3];
    
    // Complex NLL case: conditional borrows
    let r = if vec.len() > 0 {
        Some(&vec[0])
    } else {
        None
    };
    
    if let Some(val) = r {
        println!("{}", val);
    }
    
    // r is no longer used, so this is ok
    vec.push(4);
}
"#;

pub const TEST_BORROW_POLONIUS: &str = r#"
//@ category: borrowcheck
//@ compile-pass
//@ ignore (requires polonius)

fn get_or_insert<'a>(
    map: &'a mut HashMap<u32, String>,
    key: u32,
) -> &'a String {
    if let Some(value) = map.get(&key) {
        return value;  // Polonius: ok because we return here
    }
    map.insert(key, String::new());
    map.get(&key).unwrap()
}
"#;
